fixed the token issye

--- a/test/HelloWorld.html
+++ b/test/HelloWorld.html
@@ -21,7 +21,7 @@ $(document).ready(function() {
 
 // Temporary credentials for a test user account.  Change this to anything you like.
 var USERID = 'setTopBoxClient';
-var USERNAME = 'STB';
+var USERNAME = 'stb ';
 
 // Test session name and privacy mode setting.  You can change this as well.
 var SESSION_NAME = 'Change Set Top Box Channel';
@@ -157,6 +157,27 @@ $(document).on('click', '.requestUserToken', function() {
     var credentials = {'appsecret': APPSECRET, 'simple': {'userid': USERID, 'name': USERNAME}};
     MM.getToken(credentials, onSuccess, onFail);
 });
+
+
+$(document).on('click', '.checkUserToken', function() {
+        // get user token
+        var credentials = {
+            appsecret: 'ffdaeecfc06e23b12787389ba360b27fc1191e1c',
+            simple: {
+                userid: '1512',
+                name: 'Liberty Global Set Top Box Client'
+            }
+        };
+        MM.getToken(credentials,
+            function (response) {
+                var token = response.token;
+                var userId = response.user.userid;
+                 log("Token " + token  + " userID " + userId ); 
+            }
+        );
+});
+
+
 
 // Handle push updates for the active user and its associated collections.
 // Also subscribe to the custom event named 'CustomUserEvent'.
@@ -381,7 +402,7 @@ td.controlPanel {
 <div class='btnarea'><span class='label'>Step 5: </span><span class='postTextEntry btn'>Post a New Text Entry</span></div>
 <div class='btnarea'><span class='label'>Step 6: </span><span class='getDocuments btn'>Get Documents</span></div>
 <div class='btnarea'><span class='label'>Step 7: </span><span class='getEntities btn'>Get Entities</span></div>
-<div class='btnarea'><span class='label'>Step 8: </span><span class='publishUserEvent btn'>Publish Custom User Event</span></div>
+<div class='btnarea'><span class='label'>Step 8: </span><span class='checkUserToken btn'>Check User Token</span></div>
 <div class='btnarea'><span class='label'>Step 9: </span><span class='publishSessionEvent btn'>Publish Custom Session Event</span></div>
 </td>
    
